Fixed Muti-slave mode

--- a/stm32h743zi_spi_demo.ioc
+++ b/stm32h743zi_spi_demo.ioc
@@ -14,8 +14,9 @@ Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC1
 Mcu.Pin1=PC2_C
-Mcu.Pin10=PA14 (JTCK/SWCLK)
-Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin10=PA13 (JTMS/SWDIO)
+Mcu.Pin11=PA14 (JTCK/SWCLK)
+Mcu.Pin12=VP_SYS_VS_Systick
 Mcu.Pin2=PA4
 Mcu.Pin3=PA5
 Mcu.Pin4=PA6
@@ -23,8 +24,8 @@ Mcu.Pin5=PA7
 Mcu.Pin6=PB0
 Mcu.Pin7=PB10
 Mcu.Pin8=PB12
-Mcu.Pin9=PA13 (JTMS/SWDIO)
-Mcu.PinsNb=12
+Mcu.Pin9=PC8
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -37,6 +38,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -62,6 +64,8 @@ PC1.Mode=Full_Duplex_Slave
 PC1.Signal=SPI2_MOSI
 PC2_C.Mode=Full_Duplex_Slave
 PC2_C.Signal=SPI2_MISO
+PC8.Locked=true
+PC8.Signal=GPIO_Output
 PCC.Checker=true
 PCC.Line=STM32H743/753
 PCC.MCU=STM32H743ZITx
@@ -94,10 +98,10 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=stm32h743zi_spi_demo.ioc
 ProjectManager.ProjectName=stm32h743zi_spi_demo
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=TrueSTUDIO
+ProjectManager.TargetToolchain=EWARM V8
 ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.UnderRoot=false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=120000000
 RCC.AHB4Freq_Value=120000000
